--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
-    "lucide-react": "^0.539.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.11.1",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.541.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
